# bwinf-releases

./: README.md  index.html  params.json
33. BwInf/2. Runde/1. Aufgabe/Naalunth/: Seilschaften.sln
33. BwInf/2. Runde/1. Aufgabe/Naalunth/Seilschaften/: Seilschaften.cpp  Seilschaften.vcxproj  Seilschaften.vcxproj.filters  Tower.cpp  Util.h  WindowsStuff.h
33. BwInf/2. Runde/3. Aufgabe/Naalunth/: .gitignore
34. BwInf/1. Runde/1. Aufgabe/Naalunth/: .gitignore  Kassiopeia.sln
34. BwInf/1. Runde/4. Aufgabe/Naalunth/: Schlüssellöcher.sln
BwInf 33 (2014-2015)/Runde 1/Aufgabe 5/Der Skript-Tim/: source.java
BwInf 33 (2014-2015)/Runde 2/Aufgabe 2/msrd0/: aitester.sh
BwInf 34 (2015-2016)/Runde 1/Aufgabe 1/Marian/: .gitignore
BwInf 34 (2015-2016)/Runde 1/Aufgabe 2/ByteSector/: .gitignore
BwInf 34 (2015-2016)/Runde 1/Aufgabe 3/Der Skript-Tim/: .gitignore
BwInf 34 (2015-2016)/Runde 2/Aufgabe 1/msrd0/Source/: CMakeLists.txt  Geburtstagskuchen.pro
BwInf 34 (2015-2016)/Runde 2/Aufgabe 1/msrd0/Source/cakes/: circle.cake  heart.cake
BwInf 34 (2015-2016)/Runde 2/Aufgabe 1/msrd0/Source/form/: mainwindow.ui
BwInf 34 (2015-2016)/Runde 2/Aufgabe 1/msrd0/Source/include/: algo.h  editwidget.h
BwInf 34 (2015-2016)/Runde 2/Aufgabe 1/msrd0/Source/src/: algo.cpp  cli.cpp  main.cpp  mainwindow.cpp
BwInf 34 (2015-2016)/Runde 2/Aufgabe 3/msrd0/src/: CMakeLists.txt  Torkelnde_Yamyams.pro
BwInf 34 (2015-2016)/Runde 2/Aufgabe 3/msrd0/src/examples/: download.sh  examples.qrc
BwInf 34 (2015-2016)/Runde 2/Aufgabe 3/msrd0/src/img/: img.qrc
BwInf 34 (2015-2016)/Runde 2/Aufgabe 3/msrd0/src/include/: algo.h
BwInf 34 (2015-2016)/Runde 2/Aufgabe 3/msrd0/src/src/: world.cpp
BwInf 35 (2016-2017)/Runde 1/Aufgabe 1/Flogex/: .gitignore
BwInf 35 -2016-2017/Runde 1/Aufgabe 1/Flogex/: Aufgabe1.csproj
(+496 files in other folders)
